fix: mobile alignment issue fix in date month showing

--- a/style.css
+++ b/style.css
@@ -332,6 +332,23 @@ footer i.fa-heart{
     #city-input, #search-btn, .location-btn{
         width: 100%;
     }
+
+    .weather-header{
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        gap: 5px;
+    }
+
+    #city-name{
+        width: 100%;
+        margin-bottom: 0px;
+    }
+
+    .date{
+        width: 100%;
+       
+    }
 }
 
 
